# rust_visualizer

./: .gitignore  Cargo.toml  MVP.md  MVP_VS_V1.md  README.md  TEST_REPORT.md  USAGE.md  V1_TEST_REPORT.md  V2_VERSION_NOTES.md  V3_VERSION_NOTES.md  output.dot
examples/: TEST_INDEX.md  demo.dot  demo.rs  test_borrow.dot  test_borrow.rs  test_borrow_rules.rs  test_empty.dot  test_empty.rs  test_function.dot  test_function.rs  test_function_ownership.rs  test_move.dot  test_move.rs  test_mutable.dot  test_mutable.rs  test_nested_scope.dot  test_nested_scope.rs  test_ownership.dot  test_ownership.rs  test_scope.dot  test_scope.rs  test_simple.dot  test_struct_ownership.rs  test_struct_pattern.dot  test_struct_pattern.rs  test_unused.dot  test_unused.rs  v1_test_borrow_conflict.dot  v1_test_borrow_conflict.rs  v1_test_func_param_ownership.dot  v1_test_func_param_ownership.rs  v1_test_lifetime_scope.dot  v1_test_lifetime_scope.rs  v1_test_mutable_borrow_chain.dot  v1_test_mutable_borrow_chain.rs  v1_test_ownership_move.dot  v1_test_ownership_move.rs
examples/dot/: test_borrow.dot  test_move.dot  test_ownership.dot  test_scope.dot  test_unused.dot
src/: error.rs  lib.rs  main.rs
src/analysis/: borrow.rs  lifetime.rs  mod.rs  ownership.rs
src/graph/: dot_export.rs  interactive_svg.rs  mod.rs  svg_renderer.rs  timeline_animator.rs  variable_graph.rs
src/parser/: ast_visitor.rs  events.rs  mod.rs
src/web/: service.rs
tests/: v2_visualization.rs
