[package]
name = "rust_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
petgraph = "0.6"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
