[package]
name = "rust_visualizer"
version = "3.0.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
petgraph = "0.6"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "color", "wrap_help"] }
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"] }
indicatif = "0.17"
colored = "2.0"
walkdir = "2.0"

[dev-dependencies]
pretty_assertions = "1.0"